# bloodhound

./: .gitignore  .replit  CONTRIBUTING.md  LICENSE  README.md  bloodhound.py  config.yaml  pnpm-lock.yaml  pyproject.toml  replit.md  requirements.txt
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts  index.ts
artifacts/api-server/src/lib/: ai-analyzer.ts  github.ts  heuristics.ts  hunt-engine.ts  solidity-parser.ts
artifacts/api-server/src/routes/: index.ts
artifacts/api-server/src/routes/donations/: index.ts
artifacts/api-server/src/routes/hunts/: index.ts
artifacts/bloodhound-ui/: index.html  package.json
artifacts/bloodhound-ui/.replit-artifact/: artifact.toml
artifacts/bloodhound-ui/src/: App.tsx  index.css
artifacts/bloodhound-ui/src/components/: donate-modal.tsx  donation-modal.tsx  layout.tsx
artifacts/bloodhound-ui/src/pages/: home.tsx  hunt-results.tsx
attached_assets/: bloodhound-report-Revest-Finance_ResonateContracts_(1)_1778050666747.md
core/: __init__.py  heuristics.py  mythos_loop.py  solidity_parser.py  state_map.py
lib/api-spec/: openapi.yaml  orval.config.ts
lib/db/src/schema/: donors.ts  hunts.ts  index.ts
mock_project/src/: SimpleVault.sol
security/: pentest-report.md  threat-model.md
skills/: __init__.py  bloodhound_fuzz.py  bloodhound_mapper.py  bloodhound_reasoner.py  bloodhound_report.py
templates/: code4rena_high.md.j2  code4rena_qa.md.j2  immunefi_report.md.j2  invariant_test.sol.j2
tests/: __init__.py  test_fuzz.py  test_mapper.py  test_reasoner.py  test_report.py
